--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   outline: none;
 }
 body {
-  background: url(./assets/bg.jpg);
+  background: url(./assets/bg.jpeg;
   width: 100%;
   min-height: 100dvh;
   background-size: cover;
